# lan-explore

./: .gitignore  README.md  commit.bat  runGo.bat
Batch/: .gitignore  comment.bat  ret.bat  var1.bat  var2.bat
Batch/hxstrive/: aite.bat  cd.bat  hello.bat  input.bat  param1.bat  param2.bat  redirect.bat  set1.bat  set2.bat  set3.bat  set4.bat  setlocal.bat  shield.bat  str1.bat  str2.bat  str3.bat
Batch/tutorialspoint/: alias.bat  arr1.bat  arr2.bat  date.bat  echo_off.bat  fun.bat  list.bat  loop.bat  std.bat  test.bat  var3.bat
C#/: .gitignore  start.bat
C#/ClassLibraryProjects/: ClassLibraryProjects.sln
C#/Hello/: Program.cs  start.bat
C++/: ai.cpp  boyi.cpp  qifashi_search.cpp  word_analyzer.cpp
C++/lanqiao/: Makefile  contest.cpp  tmp.cpp
C/csapp/: Makefile  show-bytes.c  show-bytes.h  test-show-bytes.c
C/osexp/: Makefile
Go/: README.md
Go/hello/: go.mod
Java/: .gitignore
Java/HW/: deploy.bat  index.jsp  (+3 more)
c/: .gitignore  2.4.1.c  2.4.2.c  2.4.3.c  Makefile  game.c  lua_test.c  sscanf-test.c  test.c  zombie.c
c/json/: meson.build
cpp/: .gitignore  StrBlob.cpp  StrBlob.h  algorithm.cpp  atree.cc  cache-opt.cpp  client.cpp  common.h  disjoint-set.h  heap.h  majority-vote.h  minimum-spanning-tree.cc  minimum-spanning-tree.h  nrv.cpp  sort.cc  sort.h  sp.h  std.cpp  template.cpp  test.cpp  tt.cpp  tt.hpp
makefile/: Makefile  Makefile.2  Makefile.4  Makefile.5  Makefile.cookbook  README.md
python/: cc.py  log.txt  test.py
scheme/: README.md  bran.scm  farg.scm  farg2.scm  hello.scm  local.scm  prac1.scm  prac2.scm  repeat.scm
(+611 files in other folders)
